--- a/frontend_app/src/components/Header/Header.css
+++ b/frontend_app/src/components/Header/Header.css
@@ -1,9 +1,31 @@
 .Header {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
   border-bottom: 4px solid ;
-  height: 5rem;
+  height: 8rem;
   padding-left: 6rem;
   padding-right: 4.5rem;
+}
+
+.Left {
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+}
+
+.Header {
+  display: flex;
+  flex-direction: row;
+}
+
+.Title {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 3.2rem;
+  padding-right: 0.7rem;
+}
+
+.Icon {
+  font-size: 2rem;
 }
