--- a/frontend_app/src/components/Animal/animal.css
+++ b/frontend_app/src/components/Animal/animal.css
@@ -17,8 +17,11 @@
 }
 
 .AnimalInfo {
-  margin-top: 2rem;
   display: flex;
   justify-content: space-around;
   width: 100%;
+}
+
+.card {
+  margin: 1rem;
 }
