--- a/frontend_app/src/components/Login/Login.css
+++ b/frontend_app/src/components/Login/Login.css
@@ -2,4 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;}
+  justify-content: center;
+  padding-top: 30px;
+}
+
+.Form {
+  padding-bottom: 10px;
+}
