--- a/frontend_app/src/components/Animal/animal.css
+++ b/frontend_app/src/components/Animal/animal.css
@@ -3,25 +3,26 @@
   height: 20rem;
   width: 20rem;
   margin-bottom: 4.5rem;
-  border-radius: 10%;
+  border-top-left-radius: 8%;
 }
 
-.AnimalImage {
+ .AnimalInfo {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70%;
-  width: 100%;
-  border-bottom: 3px solid;
-  background-color: rgb(171, 168, 168);
-}
-
-.AnimalInfo {
-  display: flex;
+  flex-direction: row;
   justify-content: space-around;
   width: 100%;
+  font-size: 20px;
+  padding-bottom: 1rem;
+}  
+
+.PetName {
+  font-size:25px ;
+  padding-bottom: 10px;
+  padding-left: 0.2rem;
 }
 
 .card {
   margin: 1rem;
+
+  border-radius: 3%;
 }
