--- a/frontend_app/src/components/Favorites/Favorites.css
+++ b/frontend_app/src/components/Favorites/Favorites.css
@@ -4,7 +4,12 @@
   flex-wrap: wrap;
 }
 
-.Slogan {
-  padding-top: 1.5rem;
-  padding-bottom: 2rem;
+.AnimalsTilesContainer{
+  padding-top: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+
+body {
+  font-family: 'Akaya Telivigala', cursive;
 }
