--- a/frontend_app/src/components/Header/Header.css
+++ b/frontend_app/src/components/Header/Header.css
@@ -1,31 +1,58 @@
 .Header {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   align-items: center;
-  border-bottom: 4px solid ;
-  height: 8rem;
-  padding-left: 6rem;
+  width: 100vw;
+  height: 450px;
+  padding-top: 1%;
+  padding-left: 4.5rem;
   padding-right: 4.5rem;
+  
 }
 
-.Left {
-  display: flex;
-  flex-direction: column;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
+.Slogan {
+ height: 5%;
 }
 
-.Header {
+.HeaderTitle {
   display: flex;
   flex-direction: row;
+  color: white
+
 }
 
 .Title {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 3.2rem;
   padding-right: 0.7rem;
+  padding-left: 10px;
+  padding-bottom: 4rem;
 }
 
 .Icon {
-  font-size: 2rem;
+  padding-top: 0.8rem;
+  font-size: 2.5rem;
+}
+
+.HeaderButtons {
+  width: 20%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.HeaderButtonsNotLogged {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding-top: 5rem;
+  padding-bottom: 10rem;
+  padding-right: 5rem;
+}
+
+.LoginButton{
+  padding-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  height:5px;
 }
