--- a/frontend_app/src/components/FavoritePopUp/FavoritesPopUp.css
+++ b/frontend_app/src/components/FavoritePopUp/FavoritesPopUp.css
@@ -1,12 +1,19 @@
 /* Shade home background css goes here as well as the css for the selectec tile ---> check out google but basically one big div for whole page with opacity at like 50 ish percent and then smaller div for actual info */
 
-.AnimalPopUp {
+/* Shade home background css goes here as well as the css for the selectec tile ---> check out google but basically one big div for whole page with opacity at like 50 ish percent and then smaller div for actual info */
+
+* {
+  box-sizing: border-box;
+  font-size: 101%;
+}
+
+ .AnimalPopUp {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,51 +27,65 @@
   justify-content: center;
   align-items: center;
   width: 30%;
-  height: 680px;
+  height: 95%;
   background-color: white;
   border-radius: 5%;
-}
+} 
+
 .RefugeInfo {
-  padding-left: 2rem;
-  padding-top: 0.7rem;
-  padding-bottom: 1rem;
+  padding-left: 5%;
   width:100%;
+  height: 25%;
   display: flex;
   flex-direction: column;
+  /* background-color: #219ebc; */
 }
 
 .AnimalDesc {
+  width: 90%;
+  height: 20%;
   padding-top: 1.5rem;
-  padding-bottom: 0.75rem;
   text-align: center;
 }
 
 .Buttons {
   width: 100%;
+  height: 15%;
+  padding-top: 5%;
+  padding-bottom: 4%;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 1rem;
-  padding-left: 1.5rem;
-  padding-right: 2.50rem;
-  /* background-color: black; */
-}
+  align-items: start;
+  padding-left: 3%;
+  padding-right: 5%;
+ }
 
-.deleteButton {
-  padding-top: 2rem;
+ .deleteButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60%;
+  height:4%;
+  padding-top: 18%;
+  padding-bottom: 9%;
 }
-
 
 .fa-angles-left {
-  font-size: 25px;
+  font-size: 35px;
   color: #ffb703;
+}
 
+.fa-angles-left:hover {
+  color: #219ebc;
+  font-size: 45px;
 }
 
 img {
+  height: 100%;
   border-radius: 8px;
   border-top: 3px solid black ;
   border-right: 3px solid black ;
   border-left:  3px solid black;
   border-bottom: 3px solid rgb(12, 12, 12);
-  
-}
+
+} 
