--- a/frontend_app/src/components/Register/Register.css
+++ b/frontend_app/src/components/Register/Register.css
@@ -3,3 +3,11 @@ display: flex;
 flex-direction: column;
 align-items: center;
 justify-content: center;}
+
+.register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10%;
+  margin-left: 26%;
+}
